--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "optimist": "^0.6.1",
     "osmium": "^0.4.4",
-    "sax": "^1.1.5"
+    "sax": "^1.1.5",
+    "turf": "^2.0.2"
   },
   "devDependencies": {},
   "scripts": {
